[package]
name = "bottom"
version = "0.1.0"
license="MIT"
description="API for the bottom spec"
authors = ["Arnav <arnav.jindal7@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "0.1.2"
wasm-bindgen = "=0.2.65"
console_error_panic_hook = { version = "0.1.1", optional = true }
wee_alloc = { version = "0.4.2", optional = true }
bottomify = "1.1.1"
serde_json = "1.0"

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
opt-level = "s"
